syntax = "proto3";

package fingerprint;

service Fingerprint {
  // 获取指纹传感器版本号
  rpc getVersion(GetEmptyRequest) returns (ResVersion) {}
  // 获取指纹传感器已录入槽位数量
  rpc getTotalUser(GetEmptyRequest) returns (ResTotal) {}
  // 获取指纹传感器已录入槽位和权限清单
  rpc getRegAllUserInfo(GetEmptyRequest) returns (ResUserInfo) {}
  // 获取指纹传感器容量
  rpc getTotalCapacity(GetEmptyRequest) returns (ResTotal) {}
  // 获取指纹传感器排最前面的当前空槽位
  rpc getEmptyFno(GetEmptyRequest) returns (ResFno) {}
  // 删除传感器内所有指纹特征
  rpc deleteAll(GetEmptyRequest) returns (Res) {}
  // 删除传感器内指定的槽位的指纹特征
  rpc deleteSingle(GetFnoRequest) returns (Res) {}
  // 一次性录入指定槽位指纹
  rpc record(GetFnoRequest) returns (Res) {}
  // 第一次录入指定槽位指纹
  rpc record1(GetFnoRequest) returns (Res) {}
  // 第二次录入指定槽位指纹
  rpc record2(GetFnoRequest) returns (Res) {}
  // 第三次录入指定槽位指纹
  rpc record3(GetFnoRequest) returns (Res) {}
  // 手指按上指纹模块与指纹模块对比获取槽位号(未找到返回槽位号为0)
  rpc compareOneToMore(GetEmptyRequest) returns (ResFno) {}
  // 上传指定槽位号指纹特征值
  rpc uploadDspOne(GetFnoRequest) returns (ResFeature) {}
  // 下载特征值并与指纹模块对比获取槽位号(未找到返回槽位号为0)
  rpc downloadFeatureAndCompareOneToMore(GetFeatureRequest) returns (ResFno) {}
  // 下载特征值并保存到指纹传感器指定槽位
  rpc downloadFeatureAndSaveToDsp(GetFnoFeatureRequest) returns (ResFno) {}
  // 查看对应环境的指纹槽位是否有重复的
  rpc getRepeatedFno(GetUrlDeviceIdRequest) returns (ResFnoList);
  // 删除指纹表内不存在但是指纹传感器存在的指纹特征值
  rpc residueFno(GetUrlDeviceIdRequest) returns (Res);
  // 将指纹表存在但指纹传感器不存在的指纹下载到空槽位
  rpc download2empty(GetUrlDeviceIdRequest) returns (Res);
  // 用指纹表数据覆盖指纹传感器数据
  rpc download2overwrite(GetUrlDeviceIdRequest) returns (Res);
  // 手指按上指纹模块，获取人员信息及是否有权限登录
  rpc compareOneToMore2UserRight(GetUrlDeviceIdRequest) returns (ResMsg) {}
  // 根据指定环境、指定设备号、指定用户id录入指纹
  rpc recordUser(GetRecordUserRequest) returns (Res) {}
  // 手指按上指纹模块，录入指定槽位，并上传指纹特征验证长度是否达标
  rpc recordAndUpload(GetFnoRequest) returns (ResRecordMsg) {}
  // 验证指纹表&指纹传感器指纹特征长度是否达标
  rpc checkFeatureLength(GetUrlDeviceIdRequest) returns (Res) {}
  // 验证指纹表和指纹特征是否一一匹配
  rpc checkFeatureMatch(GetUrlDeviceIdRequest) returns (Res) {}
  // 获取指纹传感器状态
  rpc getFingerSensorStatus(GetUrlRequest) returns (ResData);
}

message GetEmptyRequest {}

message GetUrlRequest {
  string url =1;
}

message GetUrlDeviceIdRequest {
  string url =1;
  string deviceId=2;
}

message GetFnoRequest {
  uint32 fno =1;
}

message GetFeatureRequest {
  string feature =1;
}

message GetFnoFeatureRequest {
  uint32 fno =1;
  string feature =2;
}

message GetRecordUserRequest {
  string url =1;
  string deviceId=2;
  uint32 uid =3;
}

message Res {
  string result = 1;
  string error =2;
}

message ResData {
  string result = 1;
  string error =2;
  repeated ServiceInfo data=3;
}

message ServiceInfo {
  string deviceId=1;
  string deviceName=2;
  string fingerIp=3;
  string ping=4;
  string port=5;
  string status=6;
}

message ResMsg {
  string result = 1;
  string error =2;
  string msg =3;
}

message ResRecordMsg {
  string result = 1;
  uint32 fno = 2;
  uint32 right = 3;
  string feature =4;
  string msg =5;
  uint32 length = 6;
  string error=7;
}

message ResVersion {
  string result = 1;
  string version = 2;
}


message ResTotal {
  string result = 1;
  uint32 total = 2;
}

message ResFno {
  string result = 1;
  uint32 fno = 2;
  uint32 right =3;
  string error =4;
}

message ResUserRight {
  string result = 1;
  uint32 fno = 2;
  uint32 right =3;
}

message ResUserInfo {
  string result = 1;
  uint32 total = 2;
  repeated UserInfo data =3;
}

message UserInfo {
  uint32 fno = 1;
  uint32 right = 2;
}

message ResFeature {
  string result = 1;
  uint32 fno = 2;
  uint32 right = 3;
  string feature =4;
}

message ResFnoList {
  string result = 1;
  repeated uint32 fnoList = 2;
  string error =3;
}
